# qopenglplot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Sanitize.cmake
examples/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
include/: grid.h  oglcolor.h  openglplot.h  rendertext.h
openglplot/: CMakeLists.txt  axis.h  graph.cpp  graph.h  tickspos.cpp  tickspos.h
qmake/: test_opengl.pro
source/: axis.cpp  grid.cpp  oglcolor.cpp  openglplot.cpp  rendertext.cpp
